# LowLevelLLM

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Dockerfile.rocm  Makefile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
docs/: L1JSON.txt
examples/multimodels/: test.yaml
examples/prompts/: combined_llama.json  image_llama.json  image_xform.json  text_llama.json  text_xform.json  video.json  video_test.json  video_xform.json
src/: __main__.py  llm.py
src/llama_supercharged/: TRLog.py  __main__.py  generator.py  llm.py  main.py  multimodel.py
src/llama_supercharged/backends/: llamaLLM.py  llamacpp.py  xformLLM.py
src/llama_supercharged/modes/: multi_model.py  single_model.py
src/supercharger/: TRLog.py  __main__.py  llm.py  multimodel.py
src/supercharger/backends/: llamaLLM.py  xformLLM.py
src/supercharger/modes/: multi_model.py  single_model.py
tdata/image/: whitey.jxl
