[project]
name = "supercharger"
version = "0.1.0"
dependencies = [
    "PyYaml",
    "transformers",
    "torch",
    "torchvision",
    "torchcodec",
    "accelerate",
]
requires-python = ">=3.11"
authors = [
    { name = "Azkali", email = "a.ffcc7@gmail.com" },
    { name = "NV4", email = "cattobyte@kyararanbii.xyz" },
]
description = "Supercharged interface library for running (and stringing) LLMs."
readme = "README.md"

[project.optional-dependencies]
dev = ["pre-commit"]

[project.scripts]
dev = "supercharger.__main__:run"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"
